# obograph

./: .gitignore  Makefile  README.md  mkdocs.yml  setup.cfg  setup.py
model/: CONFIG.yaml
model/schema/: obograph.yaml
tests/: test_input_against_model.py
