[metadata]
name = obographs
url = https://github.com/biodatamodels/obographs
author = Chris Mungall
author_email = cjmungall@lbl.gov
summary = Modeling obograph in linkml
description = Modeling obograph in linkml
long_description = Modeling obograph in linkml
home_page = https://biodatamodels.github.io/obographs
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model

[options]
include_package_data = True

[files]
packages =
    obographs

data-files = obographs/model = obographs/model/*
    obographs/jsonld_context = obographs/jsonld_context/*
    obographs/json_schema = obographs/json_schema/*
    obographs/model = obographs/model/*


